syntax = "proto3";

package presentator;

service MatchingAggregatorService {
  rpc MatchingAggregatorDriver (Request) returns (Reply) {}
  rpc MatchingAggregatorRequest (Request) returns (Reply) {}
}

message Point {
  double longitude = 1;
  double latitude = 2;
}

message Request {
  Point point = 1;
  int64 ComputeAt = 2;
  int64 Precision = 3;
  double Smoothing = 4;
}


message Reply {
  double result = 1;
}

